# embedded-project

./: .gitignore  CMakeLists.txt  FreeRTOSConfig.h  main.cpp
F103C8/: .mxproject  F103C8.gpdsc  F103C8.ioc
F103C8/Core/: CMakeLists.txt
F103C8/Core/Src/: main.c
boot/: CMakeLists.txt  main.cpp
bsp/: CMakeLists.txt
bsp/meteostation_v1/: CMakeLists.txt  gpio.hpp
bsp/os/no_os/: CMakeLists.txt  os.cpp
cmake/: FindCMSIS.cmake  FindCMSISOS.cmake  FindDeviceUSB.cmake  FindFreeRTOS.cmake  FindUSB.cmake  stm32_gcc.cmake  tools.cmake
cmake/BOARD/: meteostation_v1.cmake  meteostation_v2.cmake
cmake/boards/: meteostation_v1.cmake  meteostation_v2.cmake
cmake/stm32/: linker_ld.cmake  utilities.cmake
cmake/stm32-cmake/cmake/stm32/: common.cmake  utilities.cmake
csp/: CMakeLists.txt
csp/share/: csp.hpp  flash.hpp  gpio.hpp  rcc.hpp  tick.hpp  uart.hpp  usb.hpp
csp/st/: CMakeLists.txt
csp/st/F1/: csp.hpp  rcc.hpp
csp/st/F103RB/: CMakeLists.txt  csp.cpp  csp.hpp  gpio.cpp  gpio.hpp  interrupts.cpp  rcc.cpp  rcc.hpp  stm32f1xx_hal_conf.h  tick.cpp  tick.hpp  uart.cpp  uart.hpp
csp/st/F103xB/: CMakeLists.txt  csp.cpp  flash.cpp  gpio.cpp  rcc.cpp
csp/st/F103xB/usb/cdc/: CMakeLists.txt  usb.cpp  usb_device.c  usbd_conf.c
csp/st/F103xB/usb/cdc/conf/: usbd_desc.c
csp/st/F401xC/: CMakeLists.txt  csp.cpp  gpio.cpp  hal.hpp
csp/st/F401xC/usb/cdc/: CMakeLists.txt  usb.cpp
csp/st/F401xC/usb/cdc/conf/: usbd_desc.c
csp/st/F446xx/: CMakeLists.txt  rcc.cpp  stm32f4xx_hal_conf.h
csp/st/F446xx/usb/cdc/: usb.cpp
csp/st/F446xx/usb/cdc/conf/: usbd_conf.c  usbd_desc.c
csp/st/share/: flash.cpp
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/boot/: CMakeLists.txt  main.cpp
src/boot/lib/: protocol.cpp  protocol.hpp
src/boot/logic/: protocol.hpp
src/bsp/: CMakeLists.txt
src/bsp/meteostation/: CMakeLists.txt  bsp.cpp  bsp.hpp  bsp_gpio.hpp  usb.cpp  usb.hpp
src/bsp/meteostation_v1/: bsp.cpp  bsp.hpp  usb.cpp
src/bsp/os/no_os/: os.cpp  os.hpp  time.cpp  time.hpp
src/bsp/share/: bsp_gpio_template.hpp  bsp_template.hpp  bsp_usb_template.hpp
src/csp/share/: csp.hpp  csp_template.hpp  flash_template.hpp  gpio.hpp  gpio_template.hpp  i2c_template.hpp  rcc_template.hpp  tick_template.hpp  timer_template.hpp  uart.hpp  uart_template.hpp  usb.hpp  usb_template.hpp
src/csp/st/: CMakeLists.txt
src/csp/st/F103xB/: CMakeLists.txt  csp.cpp  csp.hpp  flash.cpp  gpio.cpp  hal.hpp  rcc.cpp  stm32f1xx_hal_conf.h  uart.cpp
src/csp/st/F103xB/config/: stm32f1xx_hal_conf.h
src/csp/st/F103xB/i2c/: CMakeLists.txt  i2c.cpp
src/csp/st/F103xB/tick_source/: CMakeLists.txt
src/csp/st/F103xB/tick_source/systick/: CMakeLists.txt  tick_source.cpp
src/csp/st/F103xB/timer/: CMakeLists.txt
src/csp/st/F103xB/uart/: CMakeLists.txt  uart.cpp
src/csp/st/F103xB/usb/cdc/: CMakeLists.txt  usb.cpp
src/csp/st/F103xB/usb/cdc/conf/: usbd_conf.c  usbd_desc.c
src/csp/st/F401xC/: CMakeLists.txt  csp.cpp  csp.hpp  flash.cpp  gpio.cpp  rcc.cpp  stm32f4xx_hal_conf.h
src/csp/st/F401xC/i2c/: CMakeLists.txt  i2c.cpp
src/csp/st/F401xC/tick_source/: CMakeLists.txt
src/csp/st/F401xC/tick_source/systick/: CMakeLists.txt
src/csp/st/F401xC/tick_source/timer/: CMakeLists.txt  tick_source.cpp
src/csp/st/F401xC/timer/: CMakeLists.txt  timer.cpp
src/csp/st/F401xC/uart/: CMakeLists.txt  uart.cpp
src/csp/st/F401xC/usb/cdc/: CMakeLists.txt  usb.cpp
src/csp/st/F446xx/usb/cdc/conf/: usbd_conf.h
src/csp/st/share/: csp.cpp  flash.cpp  gpio.cpp  i2c.cpp  tick.cpp  timer.cpp  uart.cpp
src/csp/st/share/f1/usb/cdc/: usb.cpp
src/csp/st/share/f1/usb/cdc/conf/: usbd_desc.c
src/lib/: CMakeLists.txt
src/lib/buffers/: CMakeLists.txt  circular_buffer.hpp  liner_buffer.hpp
src/lib/data/: CMakeLists.txt  queue.hpp  string.hpp  vector.hpp  view.hpp
src/lib/lock/: CMakeLists.txt  lock.cpp  lock.hpp
src/lib/stream/: CMakeLists.txt  actions.cpp  actions.hpp  reader.cpp  reader.hpp  writer.cpp  writer.hpp
src/lib/time/: CMakeLists.txt  time.cpp  time.hpp  timer.cpp  timer.hpp
src/lib/utils/: CMakeLists.txt  crc.hpp
src/lib/wake/: CMakeLists.txt  wake.cpp  wake.hpp
src/os/no_os/: CMakeLists.txt  mutex.cpp  no_os_allocator.cpp  no_os_allocator.hpp  os.cpp  os.hpp  os_hal.hpp  os_queue.hpp  task.cpp  time.cpp
src/os/share/: CMakeLists.txt  allocate.cpp  os.hpp  os_mutex_template.hpp  os_queue_template.hpp  os_task_template.hpp  os_template.hpp  os_tick_template.hpp
tests/: CMakeLists.txt
tests/data/: string_test.cpp
toolchain/linker/st/F103xB/gcc/: 0x8002000.ld  0x8004000.ld  0x8006000.ld  0x8008000.ld
toolchain/linker/st/F401xC/gcc/: 0x8002000.ld  0x8004000.ld  0x8006000.ld  0x8008000.ld
toolchain/linker/st/F446xx/gcc/: 0x8000000.ld
toolchain/st/STM32CubeF1-1.8.3/Drivers/STM32F1xx_HAL_Driver/Inc/: stm32f1xx_hal.h
